# tiralabra-shakugenerator

./: .coverage  .coveragerc  .env  .gitignore  .pylintrc  README.md  mwav  output.csv  pyproject.toml  tasks.py  tmp_midi_output.mid  training_data.csv
documentation/: specifications.md  testing.md  user_guide.md  weekly_report_1.md  weekly_report_2.md  weekly_report_3.md  weekly_report_4.md  weekly_report_5.md  weekly_report_6.md  weekly_report_7.md
src/: auxiliary_rules.py  generate.py  index.py  midimaker.py  shaku_generator.py  trie.py
src/entities/: trie.py
src/interfaces/: interfaces.py
src/services/: filing.py  input_converter.py
src/test/: generate_test.py  trie_test.py
src/tests/: generate_test.py  interfaces_test.py  trie_test.py
training_files/: nagauta1.shaku  nagauta2.shaku
